        PR rtl-optimization/33552         * function.c (match_asm_constraints_1): Check for overlap in         inputs and replace all occurences.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@128864 138bc75d-0d04-0410-961f-82ee72b054a4